fix letter spacing

--- a/src/blocks/footer/__column-information/footer__column-information.css
+++ b/src/blocks/footer/__column-information/footer__column-information.css
@@ -4,6 +4,10 @@
 	margin: 0;
 }
 
+.footer__column-information:nth-of-type(1n) {
+	letter-spacing: -0.5px;
+}
+
 @media screen and (max-width: 1159px) {
 	.footer__column-information {
 		display: flex;
